# path-of-the-python-game

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  main.py  pyproject.toml
backend/: Dockerfile  README.md  docker-compose.yaml  main.py  openai_game.py  pyproject.toml  test_main.py  test_openai_game.py
backend/app/: fake_game.py  fake_storyteller.py  game.py  game_response.py  game_store.py  main.py  openai_storyteller.py
backend/tests/: test_game.py  test_game_store.py  test_main.py  test_openai_game.py  test_openai_storyteller.py
frontend/: Dockerfile  entrypoint.sh  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: App.css  App.js  App.test.js  GameNavigation.css  GameNavigation.js  HeaderControls.css  HeaderControls.js  Messages.css  Messages.js  PromptInput.css  PromptInput.js  SavedGames.css  SavedGames.js  gameService.js  index.css  useGame.js
