[project]
name = "path-of-the-python"
version = "0.1.0"
description = "A text-based maze adventure powered by AI"
authors = [
  { name = "Jeremy" }
]
requires-python = ">=3.13"
dependencies = [
  "fastapi[standard]",
  "openai>=1.99.9",
  "pydantic>=2.12.0",
  "redis>=6.4.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.9",
]

[tool.pytest.ini_options]
pythonpath = ["app"]
